--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0"
-
+        classpath "com.android.tools.build:gradle:4.1.1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "com.github.panpf.bintray-publish:bintray-publish:1.0.0"
     }
 }
 
