--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DialogNormalActivity" />
+        <activity android:name=".DialogBottomActivity" />
+        <activity android:name=".DialogHudActivity" />
     </application>
 
 </manifest>
